fixed wrapping issues for tech list when linked list was added

--- a/src/components/Projects/ProjectsEN.css
+++ b/src/components/Projects/ProjectsEN.css
@@ -48,6 +48,7 @@
     color: #ffecdb;
     border-radius: 10px;
     padding: 2px 5px;
+    white-space: nowrap;
   }
 
   .project_desc_EN {
@@ -125,6 +126,7 @@
     color: #ffecdb;
     border-radius: 10px;
     padding: 2px 5px;
+    white-space: nowrap;
   }
 
   .project_desc_EN {
